fix issue in file name truncate

--- a/src/pages/MediaLibrary/_mediaLibrary.module.scss
+++ b/src/pages/MediaLibrary/_mediaLibrary.module.scss
@@ -63,10 +63,19 @@
 	border-radius: 8px;
 	object-fit: cover;
 }
+
 .mediaWrapper {
 	display: flex;
 	align-items: center;
 	margin-bottom: 1.5rem;
+	div {
+		max-width: 100%;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		span {
+			white-space: nowrap;
+		}
+	}
 }
 
 .fileName {
