--- a/src/pages/PostLibrary/_postLibrary.module.scss
+++ b/src/pages/PostLibrary/_postLibrary.module.scss
@@ -98,6 +98,15 @@
 	align-items: center;
 	margin-left: 0.5rem;
 	margin-bottom: 1.5rem;
+	div {
+		max-width: 100%;
+		max-width: 60%;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		span {
+			white-space: nowrap;
+		}
+	}
 }
 
 .mediaWrapperLandscape {
